--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -5679,13 +5679,13 @@ Researchhotkey = "Q"
 -- 提示工具 - 学习
 Researchtip = "学习|cff99ccff死神炸弹|r(|cffffcc00Q|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cff33ff33寒殇|r向目标立即扔出一颗炸弹|cff99ccff（技能释放位置为全图）|r，炸弹|cffffff00（视野为225）以900的的移动速度高速移动，|r扔出的距离越远，炸弹对目标|cffffff00450范围|r的伤害越高，伤害为|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X n点魔法伤害。|n|r|cff99ccff距离在1000以内：n = 100%，距离在1000-4000以内，n=150%，距离在4000以上：n在150%的基础上，每增多500距离就提高10%。|r"
+Researchubertip = "|cff33ff33寒殇|r向目标立即扔出一颗炸弹|cff99ccff（技能释放位置为全图）|r，炸弹|cffffff00（视野为225）以900的的移动速度高速移动，|r扔出的距离越远，炸弹对目标|cffffff00450范围造成|r伤害，伤害为|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X n点魔法伤害。|n|n|r|cff99ccffn与自身和技能目标的距离有关,扔的距离越远,伤害越高.|r"
 -- 施法距离
 Rng = 99999.0000
 -- 提示工具 - 普通
 Tip = "|cff99ccff死神炸弹|r(|cffffcc00Q|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cff33ff33寒殇|r向目标立即扔出一颗炸弹|cff99ccff（技能释放位置为全图）|r，炸弹|cffffff00（视野为225）以900的的移动速度高速移动，|r扔出的距离越远，炸弹对目标|cffffff00450范围|r的伤害越高，伤害为|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X n点魔法伤害。|n|r|cff99ccff距离在1000以内：n = 100%，距离在1000-4000以内，n=150%，距离在4000以上：n在150%的基础上，每增多500距离就提高10%。|r"
+Ubertip = "|cff33ff33寒殇|r向目标立即扔出一颗炸弹|cff99ccff（技能释放位置为全图）|r，炸弹|cffffff00（视野为225）以900的的移动速度高速移动，|r扔出的距离越远，炸弹对目标|cffffff00450范围造成|r伤害，伤害为|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X n点魔法伤害。|n|n|r|cff99ccffn与自身和技能目标的距离有关,扔的距离越远,伤害越高.|r"
 -- 等级
 levels = 1
 -- 等级要求
@@ -6832,7 +6832,7 @@ Rng = 1800.0000
 -- 提示工具 - 普通
 Tip = "|cffff00ff鬼斧神工|r(|cffffcc00D|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cff33ff33寒殇|r那强大的工匠技巧能让他立即对着一件物品迅速仿制出来，且效果一模一样。|n|cffffff00使用该技能能复制一件物品29s，该物品复制后不能卖，不能于商店中升级、合成其他物品|r|cffff00ff（宝石除外）|r|cffffff00，且不能用宝石升级该物品，但能作为其他用途，30s后若该物品还存在则该物品消失。|r|cffff9900|n不能复制宝箱|r|cffffff00|n|r|cff99ccff只要一个怪物被你打过，你就能获得该怪物的所有金钱，若该怪物所受伤害均为你造成的，你能额外获得25%金币。|r"
+Ubertip = "|cff33ff33寒殇|r那强大的工匠技巧能让他立即对着一件物品迅速仿制出来，且效果一模一样。|n|cffffff00使用该技能能复制一件物品29s，该物品复制后不能卖，不能于商店中升级、合成其他物品|r|cffff00ff（宝石除外）|r|cffffff00，且不能用宝石升级该物品，但能作为其他用途，30s后若该物品还存在则该物品消失。|r|cffff9900|n不能复制宝箱|n|r|cffffff00|n|r|cff99ccff金钱获得率+30%|r"
 -- 种族
 race = "human"
 -- 目标允许
@@ -20304,13 +20304,13 @@ Researchhotkey = "E"
 -- 提示工具 - 学习
 Researchtip = "学习|cffdc143c炼金之术|r(|cffffcc00E|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cff99ccff“炼金的最高境界，就是万物皆可为金”|r|n|cffffff00|n效果1：（光环效果）|r全地图的队友金钱获得率|cffffff00+25%|r，你的金钱获得率+|cffffff0050%|r。|n|n|cffffff00效果2：|r你杀了一种单位（相同的单位类型不能算一种）后能在|cffffff00后30s|r内|cffffff00金钱获得率+10%|r。|n|cffff6699魔法值低于200时不会释放。|r"
+Researchubertip = "|cff99ccff“炼金的最高境界，就是万物皆可为金”|r|n|cffffff00|n效果1：（光环效果）|r全地图的队友金钱获得率|cffffff00+25%|r，你的金钱获得率+|cffffff0050%|r。|n|cffffff00效果2：|r你的木头数量每超过|cffffff001/10/100/1000/10000/100000|r时,你便获得|cffffff0015%的技能伤害奖励|r.|n|cffff6699魔法值低于200时不会释放。|r"
 -- 效果 - 目标
 TargetArt = "Abilities\\Spells\\NightElf\\ThornsAura\\ThornsAura.mdl"
 -- 提示工具 - 普通
 Tip = "|cffdc143c炼金之术|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cff99ccff“炼金的最高境界，就是万物皆可为金”|r|n|cffffff00|n效果1：（光环效果）|r全地图的队友金钱获得率|cffffff00+25%|r，你的金钱获得率+|cffffff0050%|r。|n|n|cffffff00效果2：|r你杀了一种单位（相同的单位类型不能算一种）后能在|cffffff00后30s|r内|cffffff00金钱获得率+10%|r。|n|cffff6699魔法值低于200时不会释放。|r"
+Ubertip = "|cff99ccff“炼金的最高境界，就是万物皆可为金”|r|n|cffffff00|n效果1：（光环效果）|r全地图的队友金钱获得率|cffffff00+25%|r，你的金钱获得率+|cffffff0050%|r。|n|cffffff00效果2：|r你的木头数量每超过|cffffff001/10/100/1000/10000/100000|r时,你便获得|cffffff0015%的技能伤害奖励|r.|n|cffff6699魔法值低于200时不会释放。|r"
 -- 等级
 levels = 1
 -- 等级要求
