--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -5184,7 +5184,7 @@ dmgpt1 = 0.2000
 -- 占用人口
 fused = 0
 -- 等级
-level = 100
+level = 65
 -- 木材奖励 - 基础值
 lumberbountyplus = 160
 -- 魔法初始数量
@@ -5603,6 +5603,8 @@ def = 80.0000
 dmgplus1 = 8000
 -- 占用人口
 fused = 0
+-- 等级
+level = 15
 -- 木材奖励 - 基础值
 lumberbountyplus = 10
 -- 单位附加值
@@ -5738,7 +5740,7 @@ dmgplus1 = 15000000
 -- 占用人口
 fused = 0
 -- 等级
-level = 30
+level = 55
 -- 木材奖励 - 基础值
 lumberbountyplus = 70
 -- 魔法最大值
@@ -5788,6 +5790,8 @@ dmgplus1 = 200000000
 dmgpt1 = 0.2000
 -- 占用人口
 fused = 0
+-- 等级
+level = 115
 -- 木材奖励 - 基础值
 lumberbountyplus = 1000
 -- 魔法初始数量
@@ -6364,6 +6368,8 @@ dmgplus1 = 10000000
 dmgpt1 = 0.3000
 -- 占用人口
 fused = 0
+-- 等级
+level = 255
 -- 木材奖励 - 基础值
 lumberbountyplus = 3000
 -- 魔法初始数量
@@ -8044,6 +8050,8 @@ def = 200.0000
 dmgplus1 = 500000
 -- 占用人口
 fused = 0
+-- 等级
+level = 45
 -- 木材奖励 - 基础值
 lumberbountyplus = 25
 -- 视野范围(夜晚)
@@ -8126,6 +8134,8 @@ dmgplus1 = 8000000
 dmgpt1 = 0.3300
 -- 占用人口
 fused = 0
+-- 等级
+level = 175
 -- 木材奖励 - 基础值
 lumberbountyplus = 2000
 -- 魔法初始数量
@@ -8334,6 +8344,8 @@ dmgplus1 = 20000000
 dmgpt1 = 0.3300
 -- 占用人口
 fused = 0
+-- 等级
+level = 145
 -- 木材奖励 - 基础值
 lumberbountyplus = 2000
 -- 魔法初始数量
@@ -8453,6 +8465,8 @@ dmgplus1 = 100000000
 dmgpt1 = 0.2000
 -- 占用人口
 fused = 0
+-- 等级
+level = 85
 -- 木材奖励 - 基础值
 lumberbountyplus = 500
 -- 魔法最大值
@@ -8892,6 +8906,8 @@ dmgplus1 = 500000000
 dmgpt1 = 0.3000
 -- 占用人口
 fused = 0
+-- 等级
+level = 125
 -- 木材奖励 - 基础值
 lumberbountyplus = 1200
 -- 魔法初始数量
@@ -9034,6 +9050,8 @@ def = 1000.0000
 dmgplus1 = 50000000
 -- 占用人口
 fused = 0
+-- 等级
+level = 95
 -- 木材奖励 - 基础值
 lumberbountyplus = 1000
 -- 魔法初始数量
@@ -9128,6 +9146,8 @@ dmgplus1 = 6000000
 dmgpt1 = 0.2000
 -- 占用人口
 fused = 0
+-- 等级
+level = 185
 -- 木材奖励 - 基础值
 lumberbountyplus = 2000
 -- 魔法初始数量
@@ -9230,6 +9250,8 @@ def = 50.0000
 dmgplus1 = 4000
 -- 占用人口
 fused = 0
+-- 等级
+level = 10
 -- 木材奖励 - 基础值
 lumberbountyplus = 5
 -- 单位附加值
@@ -9261,6 +9283,8 @@ def = 150.0000
 dmgplus1 = 13000
 -- 占用人口
 fused = 0
+-- 等级
+level = 20
 -- 木材奖励 - 基础值
 lumberbountyplus = 15
 -- 单位附加值
@@ -9452,6 +9476,8 @@ dmgplus1 = 25000000
 dmgpt1 = 0.1000
 -- 占用人口
 fused = 0
+-- 等级
+level = 75
 -- 木材奖励 - 基础值
 lumberbountyplus = 240
 -- 魔法初始数量
@@ -9963,6 +9989,8 @@ dmgplus1 = 70000
 dmgpt1 = 0.2000
 -- 占用人口
 fused = 0
+-- 等级
+level = 30
 -- 木材奖励 - 基础值
 lumberbountyplus = 20
 -- 模型缩放
@@ -10021,6 +10049,8 @@ def = 1800.0000
 dmgplus1 = 150000000
 -- 占用人口
 fused = 0
+-- 等级
+level = 105
 -- 木材奖励 - 基础值
 lumberbountyplus = 700
 -- 魔法初始数量
@@ -10122,7 +10152,7 @@ dmgplus1 = 1500000
 -- 占用人口
 fused = 0
 -- 等级
-level = 30
+level = 55
 -- 木材奖励 - 基础值
 lumberbountyplus = 30
 -- 魔法初始数量
@@ -16905,6 +16935,356 @@ file = "Abilities\\Weapons\\AvengerMissile\\AvengerMissile.mdl"
 -- 模型缩放
 modelScale = 0.6000
 
+[uG01]
+_parent = "hfoo"
+-- 生命最大值
+HP = 1
+-- 名字
+Name = "雇佣兵1号"
+-- 提示工具 - 基础
+Tip = "雇佣兵1号"
+-- 提示工具 - 扩展
+Ubertip = "能在初级练级场中帮你自动刷经验的雇佣兵，让你不在练级场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要2500守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
+-- 普通
+abilList = "A03T,Aihn,A06K"
+-- 攻击 1 - 攻击类型
+atkType1 = "pierce"
+-- 黄金奖励 - 骰子数量
+bountydice = 0
+-- 黄金奖励 - 基础值
+bountyplus = 1
+-- 黄金奖励 - 骰子面数
+bountysides = 0
+-- 碰撞体积
+collision = 32.0000
+-- 攻击 1 - 攻击间隔
+cool1 = 1.0000
+-- 基础护甲
+def = 20.0000
+-- 防御升级奖励
+defUp = 10.0000
+-- 攻击 1 - 伤害升级奖励
+dmgUp1 = 100
+-- 攻击 1 - 基础伤害
+dmgplus1 = 500
+-- 占用人口
+fused = 0
+-- 单位附加值
+points = 40
+-- 攻击 1 - 伤害骰子面数
+sides1 = 200
+-- 基础速度
+spd = 522
+-- 攻击 1 - 目标允许
+targs1 = "ground,structure,debris,air,item,ward"
+-- 使用科技
+upgrades = "R004,R003,R000,R001"
+
+[uG02]
+_parent = "hrif"
+-- 生命最大值
+HP = 360000
+-- 名字
+Name = "雇佣兵2号"
+-- 需求
+Requires = ""
+-- 提示工具 - 基础
+Tip = "雇佣兵2号"
+-- 提示工具 - 扩展
+Ubertip = "能在中级练级场中帮你自动刷经验的雇佣兵，让你不在练级场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要5000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
+-- 普通
+abilList = ""
+-- 黄金奖励 - 基础值
+bountyplus = 1
+-- 攻击 1 - 攻击间隔
+cool1 = 1.0000
+-- 基础护甲
+def = 60.0000
+-- 防御升级奖励
+defUp = 12.0000
+-- 攻击 1 - 伤害升级奖励
+dmgUp1 = 3000
+-- 攻击 1 - 基础伤害
+dmgplus1 = 7000
+-- 占用人口
+fused = 0
+-- 等级
+level = 40
+-- 魔法最大值
+manaN = 200
+-- 攻击 1 - 攻击范围
+rangeN1 = 90
+-- 生命回复
+regenHP = 0.0000
+-- 魔法回复
+regenMana = 1.5000
+-- 基础速度
+spd = 522
+-- 使用科技
+upgrades = "R004,R003,R000,R001"
+
+[uG03]
+_parent = "earc"
+-- 生命最大值
+HP = 270000
+-- 名字
+Name = "雇佣兵3号"
+-- 提示工具 - 基础
+Tip = "雇佣兵3号"
+-- 提示工具 - 扩展
+Ubertip = "能在初级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要8000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
+-- 普通
+abilList = "Anhe"
+-- 主动攻击范围
+acquire = 300.0000
+-- 默认主动技能
+auto = "Anhe"
+-- 黄金奖励 - 基础值
+bountyplus = 1
+-- 基础护甲
+def = 9.0000
+-- 防御升级奖励
+defUp = 8.0000
+-- 攻击 1 - 伤害升级奖励
+dmgUp1 = 2000
+-- 攻击 1 - 基础伤害
+dmgplus1 = 4000
+-- 占用人口
+fused = 0
+-- 等级
+level = 30
+-- 魔法最大值
+manaN = 100
+-- 单位附加值
+points = 80
+-- 攻击 1 - 攻击范围
+rangeN1 = 300
+-- 生命回复
+regenHP = 0.0000
+-- 魔法回复
+regenMana = 1.0000
+-- 生命回复类型
+regenType = "always"
+-- 攻击 1 - 伤害骰子面数
+sides1 = 10000
+-- 基础速度
+spd = 522
+-- 使用科技
+upgrades = "R004,R003,R000,R001"
+
+[uG04]
+_parent = "nchr"
+-- 生命最大值
+HP = 4000000
+-- 名字
+Name = "雇佣兵4号"
+-- 提示工具 - 基础
+Tip = "雇佣兵4号"
+-- 提示工具 - 扩展
+Ubertip = "能在中级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要15000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
+-- 普通
+abilList = "A09N"
+-- 黄金奖励 - 骰子数量
+bountydice = 0
+-- 黄金奖励 - 基础值
+bountyplus = 1
+-- 黄金奖励 - 骰子面数
+bountysides = 0
+-- 攻击 1 - 攻击间隔
+cool1 = 1.0000
+-- 基础护甲
+def = 200.0000
+-- 防御升级奖励
+defUp = 25.0000
+-- 攻击 1 - 伤害升级奖励
+dmgUp1 = 100000
+-- 攻击 1 - 基础伤害
+dmgplus1 = 1000000
+-- 占用人口
+fused = 0
+-- 等级
+level = 60
+-- 魔法最大值
+manaN = 500
+-- 单位附加值
+points = 130
+-- 生命回复
+regenHP = 0.0000
+-- 魔法回复
+regenMana = 1.0000
+-- 基础速度
+spd = 522
+-- 攻击 1 - 目标允许
+targs1 = "debris,ground,structure,air,ward,item"
+-- 使用科技
+upgrades = "R004,R003,R000,R001"
+
+[uG05]
+_parent = "hmpr"
+-- 生命最大值
+HP = 30000
+-- 名字
+Name = "雇佣兵5号"
+-- 提示工具 - 基础
+Tip = "雇佣兵5号"
+-- 提示工具 - 扩展
+Ubertip = "能在高级经验场中帮你自动刷经验的雇佣兵，让你不在经验场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要成为永久赞助且18波后才能购买|r"
+-- 普通
+abilList = "A05N"
+-- 攻击 1 - 攻击类型
+atkType1 = "pierce"
+-- 黄金奖励 - 骰子数量
+bountydice = 0
+-- 黄金奖励 - 基础值
+bountyplus = 1
+-- 黄金奖励 - 骰子面数
+bountysides = 0
+-- 碰撞体积
+collision = 32.0000
+-- 攻击 1 - 攻击间隔
+cool1 = 1.0000
+-- 基础护甲
+def = 20.0000
+-- 防御升级奖励
+defUp = 4.0000
+-- 攻击 1 - 伤害升级奖励
+dmgUp1 = 100
+-- 攻击 1 - 基础伤害
+dmgplus1 = 200
+-- 占用人口
+fused = 0
+-- 魔法初始数量
+mana0 = 1000
+-- 魔法最大值
+manaN = 400
+-- 单位附加值
+points = 40
+-- 生命回复
+regenHP = 0.0000
+-- 魔法回复
+regenMana = 4.0000
+-- 基础速度
+spd = 522
+-- 使用科技
+upgrades = "R004,R003,R000,R001"
+
+[uG06]
+_parent = "esen"
+-- 攻击 1 - 全伤害范围
+Farea1 = 0
+-- 生命最大值
+HP = 600000
+-- 名字
+Name = "雇佣兵6号"
+-- 需求
+Requires = ""
+-- 提示工具 - 基础
+Tip = "雇佣兵6号"
+-- 提示工具 - 扩展
+Ubertip = "能在高级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要成为永久赞助且22波后才能购买|r"
+-- 普通
+abilList = ""
+-- 黄金奖励 - 基础值
+bountyplus = 1
+-- 攻击 1 - 攻击间隔
+cool1 = 1.0000
+-- 基础护甲
+def = 300.0000
+-- 防御升级奖励
+defUp = 5.0000
+-- 攻击 1 - 伤害升级奖励
+dmgUp1 = 2000
+-- 攻击 1 - 基础伤害
+dmgplus1 = 4000
+-- 占用人口
+fused = 0
+-- 等级
+level = 30
+-- 魔法最大值
+manaN = 200
+-- 单位附加值
+points = 80
+-- 攻击 1 - 攻击范围
+rangeN1 = 300
+-- 生命回复
+regenHP = 0.0000
+-- 魔法回复
+regenMana = 10.0000
+-- 生命回复类型
+regenType = "always"
+-- 攻击 1 - 伤害骰子面数
+sides1 = 10000
+-- 基础速度
+spd = 522
+-- 攻击 1 - 范围影响目标
+splashTargs1 = ""
+-- 攻击 1 -最大目标数
+targCount1 = 0
+-- 使用科技
+upgrades = "R004,R003,R000,R001"
+-- 攻击 1 - 武器类型
+weapTp1 = "missile"
+
+[uS01]
+_parent = "ntav"
+-- 生命最大值
+HP = 1
+-- 名字
+Name = "虚界黑商"
+-- 售出物品
+Sellitems = "IXU2,IXU3,IXU4,IXU5,IXU6"
+-- 售出单位
+Sellunits = ""
+-- 普通
+abilList = "Aneu,Avul,Apit"
+-- 阴影图像(建筑)
+buildingShadow = ""
+-- 碰撞体积
+collision = 32.0000
+-- 模型文件
+file = "units\\undead\\Acolyte\\Acolyte"
+-- 路径纹理
+pathTex = ""
+-- 单位附加值
+points = 0
+-- 选择缩放
+scale = 1.5000
+-- 建筑地面纹理
+uberSplat = ""
+-- 阴影图像(单位)
+unitShadow = "shadow"
+-- 单位声音设置
+unitSound = "peasant"
+
+[uS02]
+_parent = "ntav"
+-- 生命最大值
+HP = 1
+-- 名字
+Name = "雇佣兵天尊"
+-- 售出单位
+Sellunits = "uG01,uG02,uG03,uG04,uG05,uG06"
+-- 普通
+abilList = "Aneu,Avul,Apit"
+-- 阴影图像(建筑)
+buildingShadow = ""
+-- 碰撞体积
+collision = 32.0000
+-- 模型文件
+file = "Units\\Creeps\\StormPandarenBrewmaster\\StormPandarenBrewmaster"
+-- 路径纹理
+pathTex = ""
+-- 单位附加值
+points = 0
+-- 选择缩放
+scale = 1.5000
+-- 建筑地面纹理
+uberSplat = ""
+-- 阴影图像(单位)
+unitShadow = "shadow"
+-- 单位声音设置
+unitSound = "peasant"
+
 [ub00]
 _parent = "hphx"
 -- 图标 - 游戏界面
@@ -17494,362 +17874,5 @@ targCount1 = 0
 unitSound = "FrostWyrm"
 -- 使用科技
 upgrades = ""
--- 攻击 1 - 武器类型
-weapTp1 = "missile"
-
-
-[uS01]
-_parent = "ntav"
--- 生命最大值
-HP = 1
--- 名字
-Name = "虚界黑商"
--- 售出物品
-Sellitems = "IXU1,IXU2,IXU3,IXU4,IXU5,IXU6"
--- 售出单位
-Sellunits = ""
--- 普通
-abilList = "Aneu,Avul,Apit"
--- 阴影图像(建筑)
-buildingShadow = ""
--- 碰撞体积
-collision = 32.0000
--- 模型文件
-file = "units\\undead\\Acolyte\\Acolyte"
--- 路径纹理
-pathTex = ""
--- 单位附加值
-points = 0
--- 选择缩放
-scale = 1.5000
--- 建筑地面纹理
-uberSplat = ""
--- 阴影图像(单位)
-unitShadow = "shadow"
--- 单位声音设置
-unitSound = "peasant"
-
-
-[uS02]
-_parent = "ntav"
--- 生命最大值
-HP = 1
--- 名字
-Name = "雇佣兵天尊"
--- 售出物品
-Sellitems = ""
--- 售出单位
-Sellunits = ""
--- 普通
-abilList = "Aneu,Avul,Apit"
--- 阴影图像(建筑)
-buildingShadow = ""
--- 碰撞体积
-collision = 32.0000
--- 模型文件
-file = "Units\\Creeps\\StormPandarenBrewmaster\\StormPandarenBrewmaster"
--- 路径纹理
-pathTex = ""
--- 单位附加值
-points = 0
--- 选择缩放
-scale = 1.5000
--- 建筑地面纹理
-uberSplat = ""
--- 阴影图像(单位)
-unitShadow = "shadow"
--- 单位声音设置
-unitSound = "peasant"
-
-[uG01]
-_parent = "hfoo"
--- 生命最大值
-HP = 1
--- 名字
-Name = "雇佣兵1号"
--- 提示工具 - 基础
-Tip = "雇佣兵1号"
--- 提示工具 - 扩展
-Ubertip = "能在初级练级场中帮你自动刷经验的雇佣兵，让你不在练级场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要2500守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
--- 普通
-abilList = "A03T,Aihn,A06K"
--- 攻击 1 - 攻击类型
-atkType1 = "pierce"
--- 黄金奖励 - 骰子数量
-bountydice = 0
--- 黄金奖励 - 基础值
-bountyplus = 1
--- 黄金奖励 - 骰子面数
-bountysides = 0
--- 碰撞体积
-collision = 32.0000
--- 攻击 1 - 攻击间隔
-cool1 = 1.0000
--- 基础护甲
-def = 20.0000
--- 防御升级奖励
-defUp = 10.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 100
--- 攻击 1 - 基础伤害
-dmgplus1 = 500
--- 占用人口
-fused = 0
--- 单位附加值
-points = 40
--- 攻击 1 - 伤害骰子面数
-sides1 = 200
--- 基础速度
-spd = 522
--- 攻击 1 - 目标允许
-targs1 = "ground,structure,debris,air,item,ward"
--- 使用科技
-upgrades = "R004,R003,R000,R001"
-
-[uG02]
-_parent = "hrif"
--- 生命最大值
-HP = 360000
--- 名字
-Name = "雇佣兵2号"
--- 提示工具 - 基础
-Tip = "雇佣兵2号"
--- 提示工具 - 扩展
-Ubertip = "能在中级练级场中帮你自动刷经验的雇佣兵，让你不在练级场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要5000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
--- 需求
-Requires = ""
--- 普通
-abilList = ""
--- 黄金奖励 - 基础值
-bountyplus = 1
--- 攻击 1 - 攻击间隔
-cool1 = 1.0000
--- 基础护甲
-def = 60.0000
--- 防御升级奖励
-defUp = 12.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 3000
--- 攻击 1 - 基础伤害
-dmgplus1 = 7000
--- 占用人口
-fused = 0
--- 等级
-level = 40
--- 魔法最大值
-manaN = 200
--- 攻击 1 - 攻击范围
-rangeN1 = 90
--- 生命回复
-regenHP = 0.0000
--- 魔法回复
-regenMana = 1.5000
--- 基础速度
-spd = 522
--- 使用科技
-upgrades = "R004,R003,R000,R001"
-
-[uG03]
-_parent = "earc"
--- 生命最大值
-HP = 270000
--- 名字
-Name = "雇佣兵3号"
--- 提示工具 - 基础
-Tip = "雇佣兵3号"
--- 提示工具 - 扩展
-Ubertip = "能在初级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要8000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
--- 普通
-abilList = "Anhe"
--- 主动攻击范围
-acquire = 300.0000
--- 默认主动技能
-auto = "Anhe"
--- 黄金奖励 - 基础值
-bountyplus = 1
--- 基础护甲
-def = 9.0000
--- 防御升级奖励
-defUp = 8.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 2000
--- 攻击 1 - 基础伤害
-dmgplus1 = 4000
--- 占用人口
-fused = 0
--- 等级
-level = 30
--- 魔法最大值
-manaN = 100
--- 单位附加值
-points = 80
--- 攻击 1 - 攻击范围
-rangeN1 = 300
--- 生命回复
-regenHP = 0.0000
--- 魔法回复
-regenMana = 1.0000
--- 生命回复类型
-regenType = "always"
--- 攻击 1 - 伤害骰子面数
-sides1 = 10000
--- 基础速度
-spd = 522
--- 使用科技
-upgrades = "R004,R003,R000,R001"
-
-
-[uG04]
-_parent = "nchr"
--- 生命最大值
-HP = 4000000
--- 名字
-Name = "雇佣兵4号"
--- 提示工具 - 基础
-Tip = "雇佣兵4号"
--- 提示工具 - 扩展
-Ubertip = "能在中级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要15000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
--- 普通
-abilList = "A09N"
--- 黄金奖励 - 骰子数量
-bountydice = 0
--- 黄金奖励 - 基础值
-bountyplus = 1
--- 黄金奖励 - 骰子面数
-bountysides = 0
--- 攻击 1 - 攻击间隔
-cool1 = 1.0000
--- 基础护甲
-def = 200.0000
--- 防御升级奖励
-defUp = 25.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 100000
--- 攻击 1 - 基础伤害
-dmgplus1 = 1000000
--- 占用人口
-fused = 0
--- 等级
-level = 60
--- 魔法最大值
-manaN = 500
--- 单位附加值
-points = 130
--- 生命回复
-regenHP = 0.0000
--- 魔法回复
-regenMana = 1.0000
--- 基础速度
-spd = 522
--- 攻击 1 - 目标允许
-targs1 = "debris,ground,structure,air,ward,item"
--- 使用科技
-upgrades = "R004,R003,R000,R001"
-
-
-[uG05]
-_parent = "hmpr"
--- 生命最大值
-HP = 30000
--- 名字
-Name = "雇佣兵5号"
--- 提示工具 - 基础
-Tip = "雇佣兵5号"
--- 提示工具 - 扩展
-Ubertip = "能在高级经验场中帮你自动刷经验的雇佣兵，让你不在经验场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要成为永久赞助且18波后才能购买|r"
--- 普通
-abilList = "A05N"
--- 攻击 1 - 攻击类型
-atkType1 = "pierce"
--- 黄金奖励 - 骰子数量
-bountydice = 0
--- 黄金奖励 - 基础值
-bountyplus = 1
--- 黄金奖励 - 骰子面数
-bountysides = 0
--- 碰撞体积
-collision = 32.0000
--- 攻击 1 - 攻击间隔
-cool1 = 1.0000
--- 基础护甲
-def = 20.0000
--- 防御升级奖励
-defUp = 4.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 100
--- 攻击 1 - 基础伤害
-dmgplus1 = 200
--- 占用人口
-fused = 0
--- 魔法初始数量
-mana0 = 1000
--- 魔法最大值
-manaN = 400
--- 单位附加值
-points = 40
--- 生命回复
-regenHP = 0.0000
--- 魔法回复
-regenMana = 4.0000
--- 基础速度
-spd = 522
--- 使用科技
-upgrades = "R004,R003,R000,R001"
-
-
-[uG06]
-_parent = "esen"
--- 攻击 1 - 全伤害范围
-Farea1 = 0
--- 生命最大值
-HP = 600000
--- 名字
-Name = "雇佣兵6号"
--- 提示工具 - 基础
-Tip = "雇佣兵6号"
--- 提示工具 - 扩展
-Ubertip = "能在高级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要成为永久赞助且22波后才能购买|r"
--- 需求
-Requires = ""
--- 普通
-abilList = ""
--- 黄金奖励 - 基础值
-bountyplus = 1
--- 攻击 1 - 攻击间隔
-cool1 = 1.0000
--- 基础护甲
-def = 300.0000
--- 防御升级奖励
-defUp = 5.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 2000
--- 攻击 1 - 基础伤害
-dmgplus1 = 4000
--- 占用人口
-fused = 0
--- 等级
-level = 30
--- 魔法最大值
-manaN = 200
--- 单位附加值
-points = 80
--- 攻击 1 - 攻击范围
-rangeN1 = 300
--- 生命回复
-regenHP = 0.0000
--- 魔法回复
-regenMana = 10.0000
--- 生命回复类型
-regenType = "always"
--- 攻击 1 - 伤害骰子面数
-sides1 = 10000
--- 基础速度
-spd = 522
--- 攻击 1 - 范围影响目标
-splashTargs1 = ""
--- 攻击 1 -最大目标数
-targCount1 = 0
--- 使用科技
-upgrades = "R004,R003,R000,R001"
 -- 攻击 1 - 武器类型
 weapTp1 = "missile"
