--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -3825,7 +3825,7 @@ ResearchArt = "ReplaceableTextures\\CommandButtons\\BTNMetamorphosis.blp"
 -- 提示工具 - 学习
 Researchtip = "学习|cffff0000雷神幻灭|r(|cffffcc00R|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "湮灭坐拥逆天能力，惊雷行驶，令敌人胆魄。|n|n|cffffff00效果1：|r使用|cffffff00雷神唤影|r时,会在目标创建一个持续4s雷神残影,每次攻击伤害|cffff6800为（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X 0.4 点,最多同时攻击5个目标.残影上限为5个.|r|n|cffffff00效果2：|r右键一个地方能立即到达该地方且不耗魔，但是没有伤害。|n|cffffff00效果3：|r遇到一个从未遇到过的敌方单位，以伤害他或者他伤害你开始|cffff6800，能5s内不受其伤害(除了能杀掉你的伤害)，且能对他造成2倍伤害。|r"
+Researchubertip = "湮灭坐拥逆天能力，惊雷行驶，令敌人胆魄。|n|n|cffffff00效果1：|r使用|cffffff00雷神唤影|r时,会在目标创建一个持续4s雷神残影,每次攻击伤害|cffff6800为（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X 0.4 点,最多同时攻击5个目标.残影上限为5个.|n|r|cffff99cc魔法值低于600时技能无效.|r|n|cffffff00效果2：|r右键一个地方能立即到达该地方且不耗魔，但是没有伤害。|n|cffffff00效果3：|r遇到一个从未遇到过的敌方单位，以伤害他或者他伤害你开始|cffff6800，能5s内不受其伤害(除了能杀掉你的伤害)，且能对他造成2倍伤害。|r"
 -- 效果 - 目标
 TargetArt = ""
 -- 效果 - 目标附加点1
@@ -3833,7 +3833,7 @@ Targetattach = ""
 -- 提示工具 - 普通
 Tip = "|cffff0000雷神幻灭|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "湮灭坐拥逆天能力，惊雷行驶，令敌人胆魄。|n|n|cffffff00效果1：|r使用|cffffff00雷神唤影|r时,会在目标创建一个持续4s雷神残影,每次攻击伤害|cffff6800为（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X 0.4 点,最多同时攻击5个目标.残影上限为5个.|r|n|cffffff00效果2：|r右键一个地方能立即到达该地方且不耗魔，但是没有伤害。|n|cffffff00效果3：|r遇到一个从未遇到过的敌方单位，以伤害他或者他伤害你开始|cffff6800，能5s内不受其伤害(除了能杀掉你的伤害)，且能对他造成2倍伤害。|r"
+Ubertip = "湮灭坐拥逆天能力，惊雷行驶，令敌人胆魄。|n|n|cffffff00效果1：|r使用|cffffff00雷神唤影|r时,会在目标创建一个持续4s雷神残影,每次攻击伤害|cffff6800为（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X 0.4 点,最多同时攻击5个目标.残影上限为5个.|n|r|cffff99cc魔法值低于600时技能无效.|r|n|cffffff00效果2：|r右键一个地方能立即到达该地方且不耗魔，但是没有伤害。|n|cffffff00效果3：|r遇到一个从未遇到过的敌方单位，以伤害他或者他伤害你开始|cffff6800，能5s内不受其伤害(除了能杀掉你的伤害)，且能对他造成2倍伤害。|r"
 -- 等级
 levels = 1
 -- 等级要求
@@ -5566,13 +5566,13 @@ Researchhotkey = "W"
 -- 提示工具 - 学习
 Researchtip = "学习|cffff00ff炼血一击|r(|cffffcc00W|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500）点混乱型伤害|r并把其变成一只小动物3s(英雄1s)。|n|cffff6800上限21亿伤害,达到后不会再增加.|r|n|n|cffffff00被动效果：|r每攻击满|cffffff0020次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
+Researchubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500）* 75% 点混乱型伤害|r并把其变成一只小动物3s(英雄1s)。|n|cffff6800上限21亿伤害,达到后不会再增加.|r|n|n|cffffff00被动效果：|r每攻击满|cffffff0020次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
 -- 施法距离
 Rng = 1800.0000
 -- 提示工具 - 普通
 Tip = "|cffff00ff炼血一击|r(|cffffcc00W|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500）点混乱型伤害|r并把其变成一只小动物3s(英雄1s)。|n|cffff6800上限21亿伤害,达到后不会再增加.|r|n|n|cffffff00被动效果：|r每攻击满|cffffff0020次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
+Ubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500）* 75% 点混乱型伤害|r并把其变成一只小动物3s(英雄1s)。|n|cffff6800上限21亿伤害,达到后不会再增加.|r|n|n|cffffff00被动效果：|r每攻击满|cffffff0020次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
 -- 等级
 levels = 1
 -- 等级要求
