--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -26998,6 +26998,19 @@ Tip = "|cffffff00祭品特征|r"
 -- 提示工具 - 普通 - 扩展
 Ubertip = "祭品|cffff6800攻击玩家与其友军时,为其恢复2%的生命值.|n|r|n祭品|cff3366ff攻击魔界势力时,对其造成英雄的（力量X1.8+敏捷+智力X1.2）X（等级的平方根）%1|r|cffffff00魔法伤害.|r|cff3366ff|n高级祭品能造成4倍伤害.|r"
 
+[A0GZ]
+_parent = "Aimp"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNWindSerpent.blp"
+-- 名字
+Name = "刺杀"
+-- 需求
+Requires = ""
+-- 提示工具 - 普通
+Tip = "刺杀"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "秒杀任何单位."
+
 [A0L1]
 _parent = "Aroc"
 -- 影响区域
