--- a/file/war3map.w3t.ini
+++ b/file/war3map.w3t.ini
@@ -3004,7 +3004,7 @@ Name = "打巨能融合石"
 -- 提示工具 - 基础
 Tip = "打巨能融合石"
 -- 提示工具 - 扩展
-Ubertip = "|cffff0000点击可以刷一个出来。|r|n能将更强大的相克装备合在一起。|n|cffff0000【注意】|r|cffffff00每次挑战该BOSS后该BOSS会增强20%的能力,请确定自己有能力挑战再来挑战!|r|n|n|cff0000ff【小提示】宝石区的怪物、以及后期的怪物都能造成大量魔法伤害，而仙器法魂能有效减少受到的魔法伤害！|r"
+Ubertip = "|cffff0000点击可以刷一个出来。|r|n能将更强大的相克装备合在一起。|n|cffff0000【注意】|r|cffffff00每次击杀该BOSS后该BOSS会增强20%的能力,请确定自己有能力挑战再来挑战!|r|n|n|cff0000ff【小提示】宝石区的怪物、以及后期的怪物都能造成大量魔法伤害，而仙器法魂能有效减少受到的魔法伤害！|r"
 -- 技能
 abilList = ""
 -- 物品分类
@@ -8870,7 +8870,7 @@ Name = "|cffffcc00龙王弓|r"
 -- 提示工具 - 基础
 Tip = "|cffffcc00龙王弓|r"
 -- 提示工具 - 扩展
-Ubertip = "此弓堪比后羿曾经射过太阳的弓，不但劲道到位，还有百步穿杨之势。|n|cffffcc00增加6000敏捷。|n增加12000攻击。|n攻击有5%几率造成直接命中的无视防御的15000伤害。|n3重射攻击|r"
+Ubertip = "此弓堪比后羿曾经射过太阳的弓，不但劲道到位，还有百步穿杨之势。|n|cffffcc00增加6000敏捷。|n增加12000攻击。|n攻击有5%几率造成直接命中的无视防御的150000伤害。|n3重射攻击|r"
 -- 技能
 abilList = "A03K"
 -- 黄金消耗
@@ -9383,31 +9383,6 @@ sellable = 0
 stockRegen = 0
 -- 使用次数
 uses = 1
-
-[I02S]
-_parent = "tdex"
--- 界面图标
-Art = "ReplaceableTextures\\CommandButtons\\BTNMarkOfFire.blp"
--- 按钮位置(X)
-"Buttonpos:1" = 1
--- 说明
-Description = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。|n|cffffff00不过我此生未见过|r|cffff00ff虚界至宝琉璃璞玉，|r|cffffff00若你能让我看到，那么我可以给你低价优惠！|r|n|n价格：|n|cffff68007000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）|r"
--- 热键
-Hotkey = ""
--- 名字
-Name = "购买|cFFCC3300【神】焱|r - LvMax"
--- 提示工具 - 基础
-Tip = "购买|cFFCC3300【神】焱|r - LvMax"
--- 提示工具 - 扩展
-Ubertip = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。|n|cffffff00不过我此生未见过|r|cffff00ff虚界至宝琉璃璞玉，|r|cffffff00若你能让我看到，那么我可以给你低价优惠！|r|n|n价格：|n|cffff68007000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）|r"
--- 技能
-abilList = ""
--- CD间隔组
-cooldownID = ""
--- 黄金消耗
-goldcost = 1
--- 购买时间间隔
-stockRegen = 10
 
 [I02W]
 _parent = "hlst"
@@ -10254,7 +10229,7 @@ Art = "ReplaceableTextures\\CommandButtons\\BTNSnazzyScrollGreen.blp"
 -- 按钮位置(Y)
 "Buttonpos:2" = 1
 -- 说明
-Description = "高级刷钱场，里面是500金币一只的，和1000金币一只的。|n|cffff0000推荐战斗力：150000以上|n|r|cff00ccff在非单人模式下，进攻怪每提高一波，每只怪的金币便提高35。|r"
+Description = "高级刷钱场，里面是1000金币一只的。|n|cffff0000推荐战斗力：150000以上|n|r|cff00ccff在非单人模式下，进攻怪每提高一波，每只怪的金币便提高35。|r"
 -- 热键
 Hotkey = ""
 -- 名字
@@ -10262,7 +10237,7 @@ Name = "|cFFFF6699高级刷钱场|r"
 -- 提示工具 - 基础
 Tip = "|cFFFF6699高级刷钱场|r"
 -- 提示工具 - 扩展
-Ubertip = "高级刷钱场，里面是500金币一只的，和1000金币一只的。|n|cffff0000推荐战斗力：150000以上|n|r|cff00ccff在非单人模式下，进攻怪每提高一波，每只怪的金币便提高35。|r"
+Ubertip = "高级刷钱场，里面是1000金币一只的。|n|cffff0000推荐战斗力：150000以上|n|r|cff00ccff在非单人模式下，进攻怪每提高一波，每只怪的金币便提高35。|r"
 -- 技能
 abilList = ""
 -- CD间隔组
@@ -12020,7 +11995,7 @@ _parent = "tdex"
 -- 界面图标
 Art = "ReplaceableTextures\\CommandButtons\\BTNSnazzyScrollGreen.blp"
 -- 说明
-Description = "高级练级场，里面是200经验一只的，也有500经验一只的。|n|cffff0000推荐战斗力：150000以上|n|r|cff00ccff在非单人模式下，进攻怪每提高一波，每只怪的金币便提高20。|r"
+Description = "高级练级场，里面是500经验一只的。|n|cffff0000推荐战斗力：150000以上|n|r|cff00ccff在非单人模式下，进攻怪每提高一波，每只怪的金币便提高20。|r"
 -- 热键
 Hotkey = ""
 -- 名字
@@ -12028,7 +12003,7 @@ Name = "|cFFFF6699高级练级场|r"
 -- 提示工具 - 基础
 Tip = "|cFFFF6699高级练级场|r"
 -- 提示工具 - 扩展
-Ubertip = "高级练级场，里面是200经验一只的，也有500经验一只的。|n|cffff0000推荐战斗力：150000以上|n|r|cff00ccff在非单人模式下，进攻怪每提高一波，每只怪的金币便提高20。|r"
+Ubertip = "高级练级场，里面是500经验一只的。|n|cffff0000推荐战斗力：150000以上|n|r|cff00ccff在非单人模式下，进攻怪每提高一波，每只怪的金币便提高20。|r"
 -- 技能
 abilList = ""
 -- CD间隔组
@@ -12957,6 +12932,206 @@ usable = 0
 -- 使用次数
 uses = 0
 
+[IMJ1]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNScrollOfHealing.blp"
+-- 说明
+Description = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cff408080【魔兽】两极魔熊|r + 该卷轴 = |cff8080ff【魔兽】北海冰蛛|r"
+-- 名字
+Name = "|cffff00ff升级卷轴1|r"
+-- 提示工具 - 基础
+Tip = "|cffff00ff升级卷轴1|r"
+-- 提示工具 - 扩展
+Ubertip = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cff408080【魔兽】两极魔熊|r + 该卷轴 = |cff8080ff【魔兽】北海冰蛛|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Purchasable"
+-- 黄金消耗
+goldcost = 2
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+
+[IMJ2]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNScrollOfHealing.blp"
+-- 说明
+Description = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cff8080ff【魔兽】北海冰蛛|r + 该卷轴 = 【魔兽】夔牛"
+-- 名字
+Name = "|cffff00ff升级卷轴2|r"
+-- 提示工具 - 基础
+Tip = "|cffff00ff升级卷轴2|r"
+-- 提示工具 - 扩展
+Ubertip = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cff8080ff【魔兽】北海冰蛛|r + 该卷轴 = 【魔兽】夔牛"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Purchasable"
+-- 黄金消耗
+goldcost = 2
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+
+[IMJ3]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNScrollOfHealing.blp"
+-- 说明
+Description = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n【魔兽】夔牛 + 该卷轴 = |cff008000【魔兽】八爪火螭|r"
+-- 名字
+Name = "|cffff00ff升级卷轴3|r"
+-- 提示工具 - 基础
+Tip = "|cffff00ff升级卷轴3|r"
+-- 提示工具 - 扩展
+Ubertip = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n【魔兽】夔牛 + 该卷轴 = |cff008000【魔兽】八爪火螭|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Purchasable"
+-- 黄金消耗
+goldcost = 2
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+
+[IMJ4]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNScrollOfHealing.blp"
+-- 说明
+Description = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cff008000【魔兽】八爪火螭|r + 该卷轴 = |cffffff00【魔兽】雷电蝠龙|r"
+-- 名字
+Name = "|cffff00ff升级卷轴4|r"
+-- 提示工具 - 基础
+Tip = "|cffff00ff升级卷轴4|r"
+-- 提示工具 - 扩展
+Ubertip = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cff008000【魔兽】八爪火螭|r + 该卷轴 = |cffffff00【魔兽】雷电蝠龙|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Purchasable"
+-- 黄金消耗
+goldcost = 2
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+
+[IMJ5]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNScrollOfHealing.blp"
+-- 说明
+Description = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cffffff00【魔兽】雷电蝠龙|r + 该卷轴 = |cff000080【魔兽】祸斗|r"
+-- 名字
+Name = "|cffff00ff升级卷轴5|r"
+-- 提示工具 - 基础
+Tip = "|cffff00ff升级卷轴5|r"
+-- 提示工具 - 扩展
+Ubertip = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cffffff00【魔兽】雷电蝠龙|r + 该卷轴 = |cff000080【魔兽】祸斗|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Purchasable"
+-- 黄金消耗
+goldcost = 2
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+
+[IMJ6]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNScrollOfHealing.blp"
+-- 说明
+Description = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cff000080【魔兽】祸斗|r + 该卷轴 = |cffff0080【魔兽】裂天兕|r"
+-- 名字
+Name = "|cffff00ff升级卷轴6|r"
+-- 提示工具 - 基础
+Tip = "|cffff00ff升级卷轴6|r"
+-- 提示工具 - 扩展
+Ubertip = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cff000080【魔兽】祸斗|r + 该卷轴 = |cffff0080【魔兽】裂天兕|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Purchasable"
+-- 黄金消耗
+goldcost = 2
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+
+[IMJ7]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNScrollOfHealing.blp"
+-- 说明
+Description = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cffff0080【魔兽】裂天兕|r + 该卷轴 = |cffff8000【魔兽】沧寒金猊|r"
+-- 名字
+Name = "|cffff00ff升级卷轴7|r"
+-- 提示工具 - 基础
+Tip = "|cffff00ff升级卷轴7|r"
+-- 提示工具 - 扩展
+Ubertip = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cffff0080【魔兽】裂天兕|r + 该卷轴 = |cffff8000【魔兽】沧寒金猊|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Purchasable"
+-- 黄金消耗
+goldcost = 2
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+
+[IMJ8]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNScrollOfHealing.blp"
+-- 说明
+Description = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cffff8000【魔兽】沧寒金猊|r + 该卷轴 = |cffff0000【魔兽】五色元凰|r"
+-- 名字
+Name = "|cffff00ff升级卷轴8|r"
+-- 提示工具 - 基础
+Tip = "|cffff00ff升级卷轴8|r"
+-- 提示工具 - 扩展
+Ubertip = "魔兽获得该卷轴后,会获得极其强大的力量从而进化成威力更强的魔兽.|n|n|cffff8000【魔兽】沧寒金猊|r + 该卷轴 = |cffff0000【魔兽】五色元凰|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Purchasable"
+-- 黄金消耗
+goldcost = 2
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+
 [IXU1]
 _parent = "infs"
 -- 界面图标
@@ -12966,13 +13141,13 @@ Art = "ReplaceableTextures\\CommandButtons\\BTNbaoyu.blp"
 -- 按钮位置(Y)
 "Buttonpos:2" = 1
 -- 说明
-Description = "虚界顶级至宝，太虚之极所筑，融合虚界之精华，炼化几千万年所形成的天界宝玉。|n|cffffcc00使用宝石升级装备时，若该物品也在身上，有100%的几率升级成功。|n|n|r|cffffff00装备来源:|n1.永久赞助获取.|n2.42转后获取.|r"
+Description = "虚界顶级至宝，太虚之极所筑，融合虚界之精华，炼化几千万年所形成的天界宝玉。|n|cffffcc00使用宝石升级装备时，若该物品也在身上，有100%的几率升级成功。|n|n|r|cffffff00装备来源:|n1.永久赞助获取.|n2.38转后获取.|r"
 -- 名字
 Name = "|cffff00ff【虚】琉璃璞玉|r"
 -- 提示工具 - 基础
 Tip = "|cffff00ff【虚】琉璃璞玉|r"
 -- 提示工具 - 扩展
-Ubertip = "虚界顶级至宝，太虚之极所筑，融合虚界之精华，炼化几千万年所形成的天界宝玉。|n|cffffcc00使用宝石升级装备时，若该物品也在身上，有100%的几率升级成功。|n|n|r|cffffff00装备来源:|n1.永久赞助获取.|n2.42转后获取.|r"
+Ubertip = "虚界顶级至宝，太虚之极所筑，融合虚界之精华，炼化几千万年所形成的天界宝玉。|n|cffffcc00使用宝石升级装备时，若该物品也在身上，有100%的几率升级成功。|n|n|r|cffffff00装备来源:|n1.永久赞助获取.|n2.38转后获取.|r"
 -- 技能
 abilList = ""
 -- 物品分类
@@ -13067,8 +13242,6 @@ stockRegen = 10
 _parent = "tdex"
 -- 界面图标
 Art = "ReplaceableTextures\\CommandButtons\\BTNDoom.blp"
--- 按钮位置(Y)
-"Buttonpos:2" = 2
 -- 说明
 Description = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。|n|cffffff00不过我此生未见过|r|cffff00ff虚界至宝琉璃璞玉，|r|cffffff00若你能让我看到，那么我可以给你低价优惠！|r|n|n价格：|n|cffff68007000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）|r"
 -- 热键
@@ -13104,6 +13277,31 @@ Hotkey = ""
 Name = "购买|cFF6699FF【神】冰|r - LvMax"
 -- 提示工具 - 基础
 Tip = "购买|cFF6699FF【神】冰|r - LvMax"
+-- 提示工具 - 扩展
+Ubertip = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。|n|cffffff00不过我此生未见过|r|cffff00ff虚界至宝琉璃璞玉，|r|cffffff00若你能让我看到，那么我可以给你低价优惠！|r|n|n价格：|n|cffff68007000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）|r"
+-- 技能
+abilList = ""
+-- CD间隔组
+cooldownID = ""
+-- 黄金消耗
+goldcost = 1
+-- 购买时间间隔
+stockRegen = 10
+
+[IXU7]
+_parent = "tdex"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNMarkOfFire.blp"
+-- 按钮位置(X)
+"Buttonpos:1" = 1
+-- 说明
+Description = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。|n|cffffff00不过我此生未见过|r|cffff00ff虚界至宝琉璃璞玉，|r|cffffff00若你能让我看到，那么我可以给你低价优惠！|r|n|n价格：|n|cffff68007000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）|r"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "购买|cFFCC3300【神】焱|r - LvMax"
+-- 提示工具 - 基础
+Tip = "购买|cFFCC3300【神】焱|r - LvMax"
 -- 提示工具 - 扩展
 Ubertip = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。|n|cffffff00不过我此生未见过|r|cffff00ff虚界至宝琉璃璞玉，|r|cffffff00若你能让我看到，那么我可以给你低价优惠！|r|n|n价格：|n|cffff68007000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）|r"
 -- 技能
