--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -16946,7 +16946,7 @@ Tip = "雇佣兵1号"
 -- 提示工具 - 扩展
 Ubertip = "能在初级练级场中帮你自动刷经验的雇佣兵，让你不在练级场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要2500守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
 -- 普通
-abilList = "A03T,Aihn,A06K"
+abilList = "Avul,A0GZ"
 -- 攻击 1 - 攻击类型
 atkType1 = "pierce"
 -- 黄金奖励 - 骰子数量
@@ -16993,7 +16993,7 @@ Tip = "雇佣兵2号"
 -- 提示工具 - 扩展
 Ubertip = "能在中级练级场中帮你自动刷经验的雇佣兵，让你不在练级场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要5000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
 -- 普通
-abilList = ""
+abilList = "Avul,A0GZ"
 -- 黄金奖励 - 基础值
 bountyplus = 1
 -- 攻击 1 - 攻击间隔
@@ -17025,6 +17025,8 @@ upgrades = "R004,R003,R000,R001"
 
 [uG03]
 _parent = "earc"
+-- 按钮位置(Y)
+"Buttonpos:2" = 1
 -- 生命最大值
 HP = 270000
 -- 名字
@@ -17034,7 +17036,7 @@ Tip = "雇佣兵3号"
 -- 提示工具 - 扩展
 Ubertip = "能在初级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要8000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
 -- 普通
-abilList = "Anhe"
+abilList = "Avul,A0GZ"
 -- 主动攻击范围
 acquire = 300.0000
 -- 默认主动技能
@@ -17074,6 +17076,10 @@ upgrades = "R004,R003,R000,R001"
 
 [uG04]
 _parent = "nchr"
+-- 按钮位置(X)
+"Buttonpos:1" = 1
+-- 按钮位置(Y)
+"Buttonpos:2" = 1
 -- 生命最大值
 HP = 4000000
 -- 名字
@@ -17083,7 +17089,7 @@ Tip = "雇佣兵4号"
 -- 提示工具 - 扩展
 Ubertip = "能在中级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要15000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
 -- 普通
-abilList = "A09N"
+abilList = "Avul,A0GZ"
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -17121,6 +17127,10 @@ upgrades = "R004,R003,R000,R001"
 
 [uG05]
 _parent = "hmpr"
+-- 按钮位置(X)
+"Buttonpos:1" = 0
+-- 按钮位置(Y)
+"Buttonpos:2" = 2
 -- 生命最大值
 HP = 30000
 -- 名字
@@ -17130,7 +17140,7 @@ Tip = "雇佣兵5号"
 -- 提示工具 - 扩展
 Ubertip = "能在高级经验场中帮你自动刷经验的雇佣兵，让你不在经验场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要成为永久赞助且18波后才能购买|r"
 -- 普通
-abilList = "A05N"
+abilList = "Avul,A0GZ"
 -- 攻击 1 - 攻击类型
 atkType1 = "pierce"
 -- 黄金奖励 - 骰子数量
@@ -17170,6 +17180,8 @@ upgrades = "R004,R003,R000,R001"
 
 [uG06]
 _parent = "esen"
+-- 按钮位置(Y)
+"Buttonpos:2" = 2
 -- 攻击 1 - 全伤害范围
 Farea1 = 0
 -- 生命最大值
@@ -17183,7 +17195,7 @@ Tip = "雇佣兵6号"
 -- 提示工具 - 扩展
 Ubertip = "能在高级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要成为永久赞助且22波后才能购买|r"
 -- 普通
-abilList = ""
+abilList = "Avul,A0GZ"
 -- 黄金奖励 - 基础值
 bountyplus = 1
 -- 攻击 1 - 攻击间隔
@@ -17232,7 +17244,7 @@ HP = 1
 -- 名字
 Name = "虚界黑商"
 -- 售出物品
-Sellitems = "IXU2,IXU3,IXU4,IXU5,IXU6"
+Sellitems = "IXU2,IXU3,IXU4,IXU5,IXU6,IXU7"
 -- 售出单位
 Sellunits = ""
 -- 普通
@@ -17254,7 +17266,7 @@ uberSplat = ""
 -- 阴影图像(单位)
 unitShadow = "shadow"
 -- 单位声音设置
-unitSound = "peasant"
+unitSound = "Acolyte"
 
 [uS02]
 _parent = "ntav"
@@ -17265,7 +17277,7 @@ Name = "雇佣兵天尊"
 -- 售出单位
 Sellunits = "uG01,uG02,uG03,uG04,uG05,uG06"
 -- 普通
-abilList = "Aneu,Avul,Apit"
+abilList = "Ane2,Avul"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
@@ -17283,7 +17295,7 @@ uberSplat = ""
 -- 阴影图像(单位)
 unitShadow = "shadow"
 -- 单位声音设置
-unitSound = "peasant"
+unitSound = "StormPandarenBrewmaster"
 
 [ub00]
 _parent = "hphx"
