--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -3346,13 +3346,13 @@ Researchhotkey = "E"
 -- 提示工具 - 学习
 Researchtip = "学习|cffffff00空间封冻|r(|cffffcc00E|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffccff33瑟雨|r在空间虫洞的基础上经过多次改造，成为暗杀利器。|n|n增加自身和整个地图所有英雄队友|cffffff0040%的敏捷|r。|n|n空间虫洞将解锁|cffffff00“群体回魔”|r和|cffffff00“诅咒”|r技能。|n|cff99ccff创造虫洞数量+1|r"
+Researchubertip = "|cffccff33瑟雨|r在空间虫洞的基础上经过多次改造，成为暗杀利器。|n|n增加自身和整个地图所有英雄队友|cffffff0040%的敏捷|r。|n空间虫洞将解锁|cffffff00“群体回魔”|r和|cffffff00“诅咒”|r技能。|n被攻击时有5%的几率将目标（和所有虫洞600范围内随机选取1个单位）封印于空间中2秒，并召唤巨大|cffff6600曼陀罗之刺|r对其造成5倍技能伤害，冷却8秒。|n|cff99ccff创造虫洞数量+1|r"
 -- 效果 - 目标
 TargetArt = "war3mapImported\\ManaTapAura.MDX"
 -- 提示工具 - 普通
 Tip = "|cffffff00空间封冻|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffccff33瑟雨|r在空间虫洞的基础上经过多次改造，成为暗杀利器。|n|n增加自身和整个地图所有英雄队友|cffffff0040%的敏捷|r。|n|n空间虫洞将解锁|cffffff00“群体回魔”|r和|cffffff00“诅咒”|r技能。|n|cff99ccff创造虫洞数量+1|r"
+Ubertip = "|cffccff33瑟雨|r在空间虫洞的基础上经过多次改造，成为暗杀利器。|n|n增加自身和整个地图所有英雄队友|cffffff0040%的敏捷|r。|n空间虫洞将解锁|cffffff00“群体回魔”|r和|cffffff00“诅咒”|r技能。|n被攻击时有5%的几率将目标（和所有虫洞600范围内随机选取1个单位）封印于空间中2秒，并召唤巨大|cffff6600曼陀罗之刺|r对其造成5倍技能伤害，冷却8秒。|n|cff99ccff创造虫洞数量+1|r"
 -- 等级
 levels = 1
 -- 等级要求
@@ -6064,7 +6064,7 @@ Researchhotkey = "W"
 -- 提示工具 - 学习
 Researchtip = "学习|cFF999966异界能量|r(|cffffcc00W|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffccff33瑟雨|r运用超强的异界能力，对敌人造成极大伤害。|n|n攻击有|cffff66005%|r的几率释放拥有33%杀伤力的|cffff6600曼陀罗之刺|r。|n|cffff6699魔法值低于200时不会释放。|n|n|r杀死一个敌人能在90s内暂时增加1%的|cffff6600力量、敏捷、智力|r，最高叠加70次。（无论是你还是控制的单位）|n|cff99ccff创造虫洞数量+1|r"
+Researchubertip = "|cffccff33瑟雨|r运用超强的异界能力，令自身属性以蔓延之势不断升长。|n|n攻击有|cffff66005%|r的几率释放拥有33%杀伤力的|cffff6600曼陀罗之刺|r。|n|cffff6699魔法值低于200时不会释放。|n|n|r杀死一个敌人（由自己控制的单位）后，自身能增加3%的能量，每10%的能量能提供|cffff660010%的力量、敏捷、智力|r加成（以10%为梯度），能量上限105%，能量也会以每秒1%的速度流失。|n|cffff6600属性每20秒刷新一次|r|n|cff99ccff创造虫洞数量+1|r"
 -- 效果 - 目标
 TargetArt = ""
 -- 效果 - 目标附加点1
@@ -18526,7 +18526,7 @@ Name = "|cffff0000夜神祭|r"
 -- 提示工具 - 普通
 Tip = "|cffff0000夜神祭|r(|cffffcc00D|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff6800黑阎|r在黑夜中独行,与六界生物签定契约,给予其强大的力量,但在死后却要效命契主.|n|n|cffffff00效果1:|r亲自杀死敌人后将创造一个祭品给自己/魔界,祭品属于自己时,会对敌方造成伤害.祭品属于魔界时,每次攻击都不会造成伤害,反而为回复生命.|cffff6800持续(等级的平方根+10)秒,祭品前3秒是无敌的.|n|r|cffffff00效果2:|r在每次使用技能或者物品时,能创造出2个祭品.|n|n|cffcc99ff祭品上限+10.|r|n|cffffff00当前祭品控制权为魔界,点击切换产生祭品的控制权为自己.|r"
+Ubertip = "|cffff6800黑阎|r在黑夜中独行,与六界生物签定契约,给予其强大的力量,但在死后却要效命契主.|n|n|cffffff00效果1:|r亲自杀死敌人后将创造一个祭品给自己/魔界,祭品属于自己时,会对敌方造成伤害.祭品属于魔界时,每次攻击都不会造成伤害,反而为回复生命与魔法值.|cffff6800持续(等级的平方根+10)秒,祭品前3秒是无敌的.|n|r|cffffff00效果2:|r在每次使用技能或者物品时,能创造出2个祭品.|n|n|cffcc99ff祭品上限+10.|r|n|cffffff00当前祭品控制权为魔界,点击切换产生祭品的控制权为自己.|r"
 
 [A0A4]
 _parent = "Apxf"
@@ -20874,13 +20874,13 @@ Researchhotkey = "T"
 -- 提示工具 - 学习
 Researchtip = "学习|cffffff00赦魂诀|r(|cffffcc00E|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffff6800黑阎|r身上掌控天地之能，剑上已附日月之灵，与其化魂之祭，共定一世。|n|n|cffffff00效果1（光环效果）：|r增加自身和所有友军50%的生命上限。|n|cffffff00效果2：|r每3秒产生一个祭品在自身周围。|n|cffff99cc魔法值低于400时无效。|r|n|cffffff00效果3（主动）：|r在目标立即产生1个带有多重攻击的持续30s的高级祭品，他的攻击速度是普通祭品的4倍，攻击力是普通祭品的4倍，且每次攻击都能同时攻击到友军和敌人，|cffff6800冷却90s.|r|n|cff3366ff祭品上限+6|r|n"
+Researchubertip = "|cffff6800黑阎|r身上掌控天地之能，剑上已附日月之灵，与其化魂之祭，共定一世。|n|n|cffffff00效果1（光环效果）：|r增加自身和所有友军50%的生命上限。|n|cffffff00效果2：|r每3秒产生一个祭品在自身周围。|n|cffff99cc魔法值低于400时无效。|r|n|cffffff00效果3（主动）：|r在目标立即产生1个带有多重攻击的持续30s的高级祭品，他的攻击力是普通祭品的20倍|cffff6800冷却90s.|r|n|cff3366ff祭品上限+6|r|n"
 -- 施法距离
 Rng = 900.0000
 -- 提示工具 - 普通
 Tip = "|cffffff00赦魂诀|r(|cffffcc00E|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff6800黑阎|r身上掌控天地之能，剑上已附日月之灵，与其化魂之祭，共定一世。|n|n|cffffff00效果1（光环效果）：|r增加自身和所有友军50%的生命上限。|n|cffffff00效果2：|r每3秒产生一个祭品在自身周围。|n|cffff99cc魔法值低于400时无效。|r|n|cffffff00效果3（主动）：|r在目标立即产生1个带有多重攻击的持续30s的高级祭品，他的攻击速度是普通祭品的4倍，攻击力是普通祭品的4倍，且每次攻击都能同时攻击到友军和敌人，|cffff6800冷却90s.|r|n|cff3366ff祭品上限+6|r|n"
+Ubertip = "|cffff6800黑阎|r身上掌控天地之能，剑上已附日月之灵，与其化魂之祭，共定一世。|n|n|cffffff00效果1（光环效果）：|r增加自身和所有友军50%的生命上限。|n|cffffff00效果2：|r每3秒产生一个祭品在自身周围。|n|cffff99cc魔法值低于400时无效。|r|n|cffffff00效果3（主动）：|r在目标立即产生1个带有多重攻击的持续30s的高级祭品，他的攻击力是普通祭品的20倍，|cffff6800冷却90s.|r|n|cff3366ff祭品上限+6|r|n"
 -- 等级
 levels = 1
 -- 种族
@@ -26996,7 +26996,7 @@ Requires = ""
 -- 提示工具 - 普通
 Tip = "|cffffff00祭品特征|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "祭品|cffff6800攻击玩家与其友军时,为其恢复2%的生命值.|n|r|n祭品|cff3366ff攻击魔界势力时,对其造成英雄的（力量X1.8+敏捷+智力X1.2）X（等级的平方根）%1|r|cffffff00魔法伤害.|r|cff3366ff|n高级祭品能造成4倍伤害.|r"
+Ubertip = "祭品|cffff6800攻击玩家与其友军时,为其恢复2%的生命值与2点魔法值.|n|r|n祭品|cff3366ff攻击魔界势力时,对其造成英雄的（力量X1.8+敏捷+智力X1.2）X（等级的平方根）%1|r|cffffff00魔法伤害.|r|cff3366ff|n高级祭品能造成50倍伤害.|r"
 
 [A0GZ]
 _parent = "Aimp"
