--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -15471,7 +15471,7 @@ castpt = 0.1000
 -- 碰撞体积
 collision = 0.0000
 -- 攻击 1 - 攻击间隔
-cool1 = 0.5000
+cool1 = 2.000
 -- 攻击 1 - 基础伤害
 dmgplus1 = 1
 -- 模型文件
@@ -15573,7 +15573,7 @@ Builds = ""
 -- 生命最大值
 HP = 1
 -- 名字
-Name = "剑圣"
+Name = "剑皇之影"
 -- 提示工具 - 基础
 Tip = ""
 -- 提示工具 - 扩展
@@ -15907,6 +15907,43 @@ _parent = "hpea"
 Builds = ""
 -- 名字 - 编辑器后缀
 EditorSuffix = "泣罗刹后续伤害"
+-- 生命最大值
+HP = 1
+-- 名字
+Name = ""
+-- 普通
+abilList = "Aloc,Avul,AQ00"
+-- 碰撞体积
+collision = 0.0000
+-- 模型文件
+file = ".mdl"
+-- 占用人口
+fused = 0
+-- 视野范围(夜晚)
+nsight = 100
+-- 单位附加值
+points = 123
+-- 生命回复
+regenHP = 0.0000
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 0
+-- 单位类别
+type = ""
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
+[hh00]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 名字 - 编辑器后缀
+EditorSuffix = "空间封冻之刺"
 -- 生命最大值
 HP = 1
 -- 名字
